# msgcli

./: README.md  install.ps1  install.sh  pyproject.toml
msgcli/: __init__.py  interactive.py  server.py
web/: index.html
